@@ -1,124 +1,0 @@
-/* CSS definition file containing site stylesheet */
-body {}
-#content {
-    width:100%; 
-    margin-left:5% auto;
-    margin-right:5% auto;
-}
-
-#footer {
-    font-size: small; 
-    font-style:italic;
-    text-align:center;
-}
-
-.row>div {
-    margin-bottom:10px;
-}
-
-#dashboard {
-    width: 98%;
-    height: 650px;
-    background: darkgray;
-    margin: auto;
-    padding: 10px;
-    display: inline-block;
-}
-
-.dashboardContainer {
-    width: 880px;
-    margin: auto;
-    height: 725px;
-    
-}
-
-.statusContainer {
-    width: 410px;
-    float: left;
-    height: 575px;
-    background-color: lightgray;
-    margin-right: 15px;
-    padding-left: 15px;
-}
-
-.playersContainer {
-    width: 410px;
-    float: left;
-    height: 575px;
-    background-color: lightgray;
-    margin-left: 15px; 
-    padding-left: 15px;
-}
-
-.rounds {
-    background-color: white;
-    margin: auto;
-    float: left;
-    width: 350px;
-    height: 450px;
-    margin-left: 15px;
-    padding-left: 15px;
-    margin-right: 15px;
-}
-
-/* CSS for content containers (panes) */
-#content-container
-{
-    text-align: center;
-    background-color: gray;
-    
-}
-
-#content-left, #content-right
-{
-    display: inline-block;
-    width: 45%;
-    text-align: initial;
-    background-color: white;
-    margin: 0.5em;
-    padding: 0.5em;
-    vertical-align: top;
-}
-
-/* CSS for portfolio page */
-
-#part-table 
-{
-    border-collapse: collapse;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-#part-table, #part-table tr,th,td 
-{
-    border: 1px solid black;
-}
-
-#part-table th,td 
-{
-    width: 20%;
-}
-
-#part-table .table-title, .portfolio-label 
-{
-    font-weight: bold;
-    font-size: 1.25em;
-}
-
-#peanuts
-{
-    border: 1px solid black;
-    min-width:10em;
-    display: inline-block;
-    padding: 5px;
-}
-
-#purchases, #sales
-{
-    padding-left: 10px;        
-}
-
-#purchases p, #sales p
-{
-            
-}
